--- a/dbt_vivo_modeling/dbt_vivo/models/staging/stg_pubmed.yml
+++ b/dbt_vivo_modeling/dbt_vivo/models/staging/stg_pubmed.yml
@@ -2,10 +2,10 @@ version: 2
 
 models:
   - name: stg_pubmed
-    description: "Staging table for pubmed table."
+    description: "Staging table for stg_pubmed table."
     columns:
       - name: id
-        description: "Unique identifier for the pubmed."
+        description: "Unique identifier for the stg_pubmed."
         tests:
           - not_null
           - unique
