--- a/jobs/traitement_ad_hook/pyproject.toml
+++ b/jobs/traitement_ad_hook/pyproject.toml
@@ -21,6 +21,9 @@ dependencies = [
 packages = [{include = "traitement_ad_hook", from = "src"}]
 
 
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^4.2.0"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
