--- a/jobs/upload_to_gcs/pyproject.toml
+++ b/jobs/upload_to_gcs/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "google-cloud-storage (>=3.1.0,<4.0.0)",
-    "python-dotenv (>=1.1.0,<2.0.0)"
+    "python-dotenv (>=1.1.0,<2.0.0)",
+    "pre-commit (>=4.2.0,<5.0.0)"
 ]
 
 [tool.poetry]
