--- a/jobs/upload_to_gcs/pyproject.toml
+++ b/jobs/upload_to_gcs/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.11"
 dependencies = [
     "google-cloud-storage (>=3.1.0,<4.0.0)",
     "python-dotenv (>=1.1.0,<2.0.0)",
-    "pre-commit (>=4.2.0,<5.0.0)"
+    "pre-commit (>=4.2.0,<5.0.0)",
+    "dotenv (>=0.9.9,<0.10.0)"
 ]
 
 [tool.poetry]
