--- a/jobs/traitement_ad_hook/pyproject.toml
+++ b/jobs/traitement_ad_hook/pyproject.toml
@@ -23,6 +23,8 @@ packages = [{include = "traitement_ad_hook", from = "src"}]
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.2.0"
+pytest = "^8.3.5"
+pytest-mock = "^3.14.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
