Update the dbt job
Use the Oauth methode instead of service-account

--- a/jobs/dbt_vivo/src/dbt_vivo/dbt_vivo_project/profiles.yml
+++ b/jobs/dbt_vivo/src/dbt_vivo/dbt_vivo_project/profiles.yml
@@ -4,9 +4,8 @@ dbt_vivo_project:
       dataset: "{{ env_var('DBT_DATASET_DEV') }}" 
       job_execution_timeout_seconds: 300
       job_retries: 1
-      keyfile: "{{ env_var('KEYPATH_DEV') }}"
       location: "{{ env_var('LOCATION_DEV') }}"
-      method: service-account
+      method: oauth
       priority: interactive
       project: "{{ env_var('PROJECT_ID') }}"
       threads: 1
@@ -15,9 +14,8 @@ dbt_vivo_project:
       dataset: "{{ env_var('DBT_DATASET_PROD') }}" 
       job_execution_timeout_seconds: 300
       job_retries: 1
-      keyfile: "{{ env_var('KEYPATH_PROD') }}"
       location: "{{ env_var('LOCATION_PROD') }}"
-      method: service-account
+      method: oauth
       priority: interactive
       project: "{{ env_var('PROJECT_ID') }}"
       threads: 1
