Add dbt models documentation + lineage graph

--- a/jobs/dbt_vivo/src/dbt_vivo/dbt_vivo_project/models/staging/stg_pubmed.yml
+++ b/jobs/dbt_vivo/src/dbt_vivo/dbt_vivo_project/models/staging/stg_pubmed.yml
@@ -9,5 +9,13 @@ models:
         tests:
           - not_null
           - unique
-
-     
+      - name: date
+        description: "publish date."
+        tests:
+          - not_null
+      - name: journal
+        description: "Publication journal"
+        tests:
+          - not_null
+      - name: title
+        description: "Publication title"
